# ml-rest-manager

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  example.json  pyproject.toml
api/: .env  Dockerfile  application.py  requirements.txt  uwsgi.ini
api/db/: mysql_repository.py  mysql_repository.py~
api/db/queries/: create_tables.sql  create_tables.sql~  insert_binary_model.sql  insert_binary_model.sql~  insert_model_metadata.sql  insert_model_metadata.sql~  retrieve_model_metadata_by_id.sql~  trained_score.sql
api/models/: model_creation_entity.py  model_training_entity.py
api/services/: ml_manager_service.py  ml_manager_service.py~
app/: app.py  config.py  config.py~
app/db/: mysql_repository.py  mysql_repository.py~
app/db/queries/: insert_binary_model.sql  retrieve_model_metadata_by_id.sql  retrieve_model_metadata_by_id.sql~  trained_score.sql  trained_score.sql~
app/entities/: mcqa_entities.py
app/models/: __init__.py  __init__.py~  model_creation_entity.py  model_creation_entity.py~  model_training_entity.py  model_training_entity.py~
app/routers/: ml_mgm_router.py  ml_mgm_router.py~
app/services/: distilbert_mcqa_service.py  lifespan_model_load.py  mcqa_manager_service.py  ml_manager_service.py  ml_manager_service.py~
client/: api_test.py
