[tool.poetry]
name = "app"
version = "0.1.0"
description = "Machine Learning API for manage models"
authors = ["haroldo velez <hvelez020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
uvicorn = "^0.31.0"
fastapi = {extras = ["standard"], version = "^0.128.0"}
pydantic-settings = "^2.5.2"
pydantic = "^2.9.2"
spacy = "^3.8.2"
pandas = "^2.3.3"
jupter = "^0.1.0"
ipykernel = "^7.1.0"
numpy = "2.2.6"
scikit-learn = "1.7.2"
transformers = "^4.57.6"
torch = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
